--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4 || ^5 || ^6"
+    "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4 || ^5 || ^6",
+    "ol": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
