--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
         python-version: ["3.8", "3.12"]
     steps:
       - name: Checkout
@@ -21,13 +21,12 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
       - name: Install build dependencies
-        run: python -m pip install build
+        run: python -m pip install build jupyterlab=4
 
       - name: Install yarn dependencies
         run: yarn run build
 
       - name: Linting
-        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: yarn run lint:check
 
       - name: Build Python package
