--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
       - name: Install build dependencies
-        run: python -m pip install build jupyterlab=4
+        run: python -m pip install build jupyterlab==4
 
       - name: Install yarn dependencies
         run: yarn run build
