--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,33 +12,78 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.7", "3.10"]
+        os: [ubuntu-latest]
+        python-version: ["3.8", "3.12"]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
-      - name: Install dependencies
+      - name: Install build dependencies
+        run: python -m pip install build jupyterlab==4
+
+      - name: Install yarn dependencies
         run: |
-          python -m pip install -U codecov
-          npm install -g codecov
-      - name: Test the extension
-        run: |
-          python -m pip install --upgrade -v -e ".[test, examples, docs]"
-          python -m pytest
-          yarn run test
+          jlpm install
+          jlpm run build
 
       - name: Linting
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: |
-          yarn run lint:check
+        run: jlpm run lint:check
 
-      - name: Check docs can be build + links
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        working-directory: docs
-        run: |
-          sudo apt install -y pandoc
-          make html
-          python -m pytest --check-links
+      - name: Build Python package
+        run: python -m build
+
+      - name: Upload builds
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist ${{ github.run_number }}
+          path: ./dist
+
+  visual-regression-tests:
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist ${{ github.run_number }}
+          path: ./dist
+
+      - name: Install dependencies
+        run: python -m pip install jupyterlab==4
+
+      - name: Install the package
+        run: pip install -vv ipyopenlayers*.whl
+        working-directory: dist
+
+      - name: Install dependencies
+        shell: bash -l {0}
+        working-directory: ui-tests
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+        run: jlpm install
+
+      - name: Install browser
+        shell: bash -l {0}
+        run: npx playwright install chromium
+        working-directory: ui-tests
+
+      - name: Execute integration tests
+        shell: bash -l {0}
+        working-directory: ui-tests
+        run: jlpm run test
+
+      - name: Upload Playwright Test report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: ipyopenlayers-playwright-tests
+          path: |
+            ui-tests/test-results
+            ui-tests/playwright-report
