--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/source/_static/
 docs/source/_static/embed-bundle.js
 docs/source/_static/embed-bundle.js.map
 
@@ -153,5 +154,6 @@ ipyopenlayers/nbextension/index.*
 
 # Packed lab extensions
 ipyopenlayers/labextension
+ipyopenlayers/nbextension
 
 .yarn
