--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4 || ^5 || ^6",
+    "@jupyterlab/galata": "^5.2.2",
     "ol": "^9.1.0"
   },
   "devDependencies": {
@@ -64,7 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "acorn": "^8.11.3",
-    "css-loader": "^6.9.1",
+    "css-loader": "^7.1.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -76,7 +77,7 @@
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
     "source-map-loader": "^5.0.0",
-    "style-loader": "^3.3.4",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "typescript": "~5.3.3",
