map css +include extension.js

--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,8 @@ ipyopenlayers/nbextension/index.*
 ipyopenlayers/labextension
 ipyopenlayers/nbextension
 
+
+!ipyopenlayers/nbextension/
 !ipyopenlayers/nbextension/extension.js
 
 
