--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,9 @@ $RECYCLE.BIN/
 # NPM
 # ----
 
+# Ignoring the package-lock.json file
+package-lock.json
+
 **/node_modules/
 ipyopenlayers/nbextension/index.*
 
