get center and zoom from view

--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,11 @@ $RECYCLE.BIN/
 **/node_modules/
 ipyopenlayers/nbextension/index.*
 
+#Ignoring the package-lock.json file
+package-lock.json
+
+
+
 # Coverage data
 # -------------
 **/coverage/
