--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4 || ^5 || ^6",
-    "ol": "^9.1.0"
+    "ol": "^9.1.0",
+    "olwind": "github:gberaudo/olwind#master"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
