--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,9 @@ classifiers = [
 ]
 dependencies = [
     "ipywidgets>=8.0.0",
+    "traitlets",
 ]
-version = "0.1.0.dev0"
+version = "0.1.0"
 
 [project.optional-dependencies]
 docs = [
