deteled extra file

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,11 @@ docs/_build/
 docs/source/_static/
 docs/source/_static/embed-bundle.js
 docs/source/_static/embed-bundle.js.map
+docs/build
+docs/content
+docs/.jupyterlite.doit.db
+docs/jupyterlite_config.json
+
 
 # PyBuilder
 target/
@@ -164,3 +169,7 @@ ipyopenlayers/nbextension
 
 
 .yarn
+
+#jupyter lite
+_output
+.jupyterlite.doit.db
