--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,9 @@ instance/
 
 # Sphinx documentation
 docs/_build/
-docs/source/_static/
-docs/source/_static/embed-bundle.js
-docs/source/_static/embed-bundle.js.map
+docs/_static/
+docs/_static/embed-bundle.js
+docs/_static/embed-bundle.js.map
 docs/build
 
 
