--- a/docs/build-environment.yml
+++ b/docs/build-environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - jupyterlab~=4.0
   - jupyter-packaging~=0.12
   - jupyter-sphinx
+  - nbsphinx-link
   - build
   - branca
   - hatch
