Add action to build the docs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,20 @@ jobs:
           name: dist ${{ github.run_number }}
           path: ./dist
 
+  build-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: docs/build-environment.yml
+
+      - name: Build
+        run: sphinx-build . output
+        working-directory: docs
+
   visual-regression-tests:
     runs-on: ubuntu-latest
     needs: [build]
