--- a/docs/build-environment.yml
+++ b/docs/build-environment.yml
@@ -7,14 +7,15 @@ dependencies:
   - yarn~=3.0
   - jupyterlab~=4.0
   - jupyter-packaging~=0.12
+  - sphinx
   - jupyter-sphinx
+  - nbsphinx
   - nbsphinx-link
   - python-build
   - branca
   - requests
   - hatch
   - pydata-sphinx-theme
-  - sphinx
   - jupyterlite-sphinx
   - jupyterlite-xeus
   - pip:
