Add documentation and tests (#34)
* add python tests

* added doc

* added notebooks

* jupyter lite in progresss

* added test notebooks

* change notebooks

* notebooks

* Heatmap notebooks

* change te title in docs

* added notebooks examples for github

* jupyter lite + python block for geotiff

* Delete jupyter lite files

* remove jupyter lite file

* deteled extra file

* fixed doc

* documentation improved

* Update Playwright Snapshots

* Iterate on the docs and the jupyterlite build

* Iterate

* Rework docs

* Iterate

* Iterate

* Pin Python

* Update Playwright Snapshots

* More gentle test

* Add action to build the docs

* Fix package name

* Fix default shell + deps

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: martinRenou <martin.renou@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: '*'
 
+defaults:
+  run:
+    shell: bash -l {0}
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -39,6 +43,20 @@ jobs:
         with:
           name: dist ${{ github.run_number }}
           path: ./dist
+
+  build-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: docs/build-environment.yml
+
+      - name: Build
+        run: sphinx-build . output
+        working-directory: docs
 
   visual-regression-tests:
     runs-on: ubuntu-latest
