--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,13 @@ instance/
 
 # Sphinx documentation
 docs/_build/
-docs/source/_static/
-docs/source/_static/embed-bundle.js
-docs/source/_static/embed-bundle.js.map
+docs/_static/
+docs/_static/embed-bundle.js
+docs/_static/embed-bundle.js.map
+docs/build
+docs/output
+docs/jupyter_execute
+
 
 # PyBuilder
 target/
@@ -159,8 +163,13 @@ package-lock.json
 # Packed lab extensions
 ipyopenlayers/labextension
 ipyopenlayers/nbextension
-
 !ipyopenlayers/nbextension/extension.js
 
 
 .yarn
+.vscode/
+
+#jupyter lite
+.jupyterlite.doit.db
+lite_build_output/dist
+lite_build_output/.jupyterlite.doit.db
