Update output path for documentation widget bundle

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
-docs/source/_static/
+docs/_static/
 docs/_static/embed-bundle.js
 docs/_static/embed-bundle.js.map
 docs/build
