--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,6 @@ instance/
 # Sphinx documentation
 docs/_build/
 docs/_static/
-docs/_static/embed-bundle.js
-docs/_static/embed-bundle.js.map
 docs/build
 docs/output
 docs/jupyter_execute
@@ -133,6 +131,8 @@ ehthumbs.db
 # Folder config file
 Desktop.ini
 .config.ini
+.env.ini
+
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
@@ -167,9 +167,5 @@ ipyopenlayers/nbextension
 
 
 .yarn
-.vscode/
-
 #jupyter lite
 .jupyterlite.doit.db
-lite_build_output/dist
-lite_build_output/.jupyterlite.doit.db
