--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "ipywidgets>=8.0.0",
     "traitlets",
 ]
-version = "0.1.0"
+version = "0.2.0"
 
 [project.optional-dependencies]
 docs = [
@@ -112,7 +112,7 @@ file = [
 ]
 
 [tool.tbump.version]
-current = "0.1.0.dev0"
+current = "0.2.0"
 regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"
 
 [tool.tbump.git]
